--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="estadisticas">Estadisticas</string>
     <string name="equipo">Equipo</string>
     <string name="amsterdam">Amsterdam</string>
+    <string name="registrar_partido">Registrar partido</string>
+    <string name="nombre_rival">Nombre rival</string>
+    <string name="goles_a_favor">Goles a favor</string>
+    <string name="goles_en_contra">Goles en contra</string>
+    <string name="goleadores">Goleadores</string>
+    <string name="participaciones">Participaciones</string>
 </resources>
